Bug 1071290 - Allow Blobs in Fetch BodyInit. r=baku