dom/workers/test/fetch/worker_test_response.js
@@ -44,7 +44,6 @@ function testBodyUsed() {
   });
 }
 
-// FIXME(nsm): Bug 1071290: We can't use Blobs as the body yet.
 function testBodyCreation() {
   var text = "κόσμε";
   var res1 = new Response(text);
@@ -63,6 +62,11 @@ function testBodyCreation() {
     is("Hello", v, "Extracted string should match");
   });
 
+  var resblob = new Response(new Blob([text]));
+  var pblob = resblob.text().then(function(v) {
+    is(v, text, "Extracted string should match");
+  });
+
   var params = new URLSearchParams();
   params.append("item", "Geckos");
   params.append("feature", "stickyfeet");
@@ -75,7 +79,7 @@ function testBodyCreation() {
     is(extracted.get("quantity"), "700", "Param should match");
   });
 
-  return Promise.all([p1, p2, p2b, p3]);
+  return Promise.all([p1, p2, p2b, pblob, p3]);
 }
 
 function testBodyExtraction() {
